tests/baselines/reference/hexadecimal-invalid-digit.errors.txt
hexadecimal-invalid-digit.ts(25,3): error TS1125: Hexadecimal digit expected.
hexadecimal-invalid-digit.ts(25,3): error TS2304: Cannot find name 'gn'.


==== hexadecimal-invalid-digit.ts (2 errors) ====
    // Copyright (C) 2017 Robin Templeton. All rights reserved.
    // This code is governed by the BSD license found in the LICENSE file.
    
    /*---
    description: Hexadecimal BigInt literal containing an invalid digit
    esid: prod-NumericLiteral
    info: |
      NumericLiteral ::
        NumericLiteralBase NumericLiteralSuffix
    
      NumericLiteralBase ::
        DecimalLiteral
        BinaryIntegerLiteral
        OctalIntegerLiteral
        HexIntegerLiteral
    
      NumericLiteralSuffix :: n
    negative:
      phase: parse
      type: SyntaxError
    features: [BigInt]
    ---*/
    
    
    0xgn;
      
!!! error TS1125: Hexadecimal digit expected.
      ~~
!!! error TS2304: Cannot find name 'gn'.
    